@@ -1,10 +1,14 @@
-2014-10-02  Charlie Zender  <zender@uci.edu>
+2014-10-07  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.4.7 release procedure:
  	Changes since nco-4_4_6: -0->-1,
 	cd ~/nco;cvs tag -d nco-4_4_7;cvs tag -d nco-4_4_7-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.4.7 release"
 	cvs tag -c nco-4_4_7;cvs tag -c nco-4_4_7-1
+
+	* Add regression checks for valid values in renamed coordinates in netCDF4 files
+
+2014-10-02  Charlie Zender  <zender@uci.edu>
 
 	* Change to real Python convention where -1 is last element, e.g., -2 is penultimate element, -N is first element
 
@@ -33,7 +37,7 @@
 2014-09-29  Charlie Zender  <zender@uci.edu>
 
 	* Implement USE_NC4_SRD_WORKAROUND by default in all applicable	cases, i.e.,
-	for singly strided hyperslab access to netCDF4 files.
+	for singly strided hyperslab access to netCDCF4 files.
 
 2014-09-26  Charlie Zender  <zender@uci.edu>
 
